--- a/python-projects/Day32/temperature.yaml
+++ b/python-projects/Day32/temperature.yaml
@@ -1,3 +1,3 @@
 temp:
-  # x_path: "//*[@id="qlook"]/div[2]"
-  xpath: "/html/body/div[6]/main/article/section[1]/div[1]/div[2]"
+  # xpath: //*[@id="qlook"]/div[2]'
+  xpath: "/html/body/div[5]/main/article/section[1]/div[1]/div[2]"
